@@ -1,3 +1,7 @@
+Tue Jul 30 14:36:28 2002  George Lebl <jirka@5z.com>
+
+	* gui/gdmlanguages.c: added a few more untranslated strings
+
 Tue Jul 30 14:13:53 2002  George Lebl <jirka@5z.com>
 
 	* gui/gdmlanguages.c: add a failsafe en_US language in case there is
